--- a/src/app/registeruser/registeruser.component.html
+++ b/src/app/registeruser/registeruser.component.html
@@ -1,12 +1,12 @@
 <div>
     <form action="" #userForm="ngForm" (ngSubmit)="doRegister(userForm.value)">
         <div class="form-group" >
-            <input type="text" class="form-control" required name="username" placeholder="Enter Name" ngModel
+            <input type="text" class="form-control" required name="username" placeholder="Enter Name" [(ngModel)]="userObj.username"
             #username="ngModel">
          <small class="error" *ngIf="username.invalid && username.touched">Username is required</small>   
         </div>
         <div class="form-group">
-            <input type="number" class="form-control" required pattern="^\d{10}$" name="mobile" placeholder="Mobile No" ngModel
+            <input type="number" class="form-control" required pattern="^\d{10}$" name="mobile" placeholder="Mobile No" [(ngModel)]="userObj.mobile"
             #mobile="ngModel">
           <div *ngIf="mobile.invalid && mobile.touched">
              <small class="error" *ngIf="mobile.errors.required">Mobile No is Required</small>
@@ -14,12 +14,37 @@
           </div>
         </div>
         <div class="form-group">
-            <input type="email" class="form-control" name="email" placeholder="Email" ngModel>
+            <input type="email" class="form-control" name="email" placeholder="Email" [(ngModel)]="userObj.email">
         </div>
         <div class="form-group">
-            <input type="text" class="form-control" name="address" placeholder="Address" ngModel>
+            <input type="text" class="form-control" name="address" placeholder="Address" [(ngModel)]="userObj.address">
         </div>
        <br>
-       <button class="btn btn-info" type="submit">Register</button>
+       <button class="btn btn-info" *ngIf="!isEdit" type="submit">Register</button>
+       <button class="btn btn-info" *ngIf="isEdit" type="submit" (click)="updateUser(userForm)" >Update</button>
     </form>
 </div>
+<br>
+<br>
+<table class="table">
+    <thead>
+      <tr>
+        <th scope="col">id</th>
+        <th scope="col">Username</th>
+        <th scope="col">Mobile</th>
+        <th scope="col">Email</th>
+        <th scope="col">Address</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let user of allUsers">
+        <th scope="row">{{ user.id }}</th>
+        <td>{{ user.username}}</td>
+        <td>{{ user.mobile }}</td>
+        <td>{{ user.email }}</td>
+        <td>{{ user.address}}</td>
+        <td><button class="btn btn-warning" (click)="editUser(user)">Edit</button> </td>
+        <td><button class="btn btn-danger" (click)="deleteMe(user)">Delete</button></td>
+      </tr>
+   </tbody>
+   </table>
