--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,9 @@
 <div id="demo">
   <h2>Sample Application</h2>
 </div>
+ <a class="btn btn-primary" routerLink="/register">Register</a> &nbsp;&nbsp;
+ <a class="btn btn-primary" routerLink="/userlist">Users</a>
 <br>
 <br>
-<app-registeruser></app-registeruser>
+<!--<app-registeruser></app-registeruser> -->
 <router-outlet></router-outlet>
